# dicom_transfer_pipeline

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STEP_01_PROJECT_PLANNING.md  install.ps1  install.sh
.github/: cleanup-audit.md  install-analysis.md
dicom_guardian/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dicom_guardian/app/: __init__.py  config.py  main.py
dicom_guardian/app/api/: __init__.py  routes.py
dicom_guardian/app/database/: __init__.py  connection_test.py  db.py  models.py
dicom_guardian/app/dicom/: __init__.py  checksum.py  compressor.py  normalizer.py  reader.py  receiver.py  sender.py  validator.py
dicom_guardian/app/pipeline/: __init__.py  processor.py
dicom_guardian/app/security/: __init__.py  security_test.py  tls.py
dicom_guardian/certificates/: README.md
dicom_ui/: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json
dicom_ui/backend/: package.json  server.js
dicom_ui/backend/certificates/: README.md
dicom_ui/backend/config/: app.js  db.js  env.js  index.js  tls.js
dicom_ui/backend/controllers/: auth.controller.js  log.controller.js  study.controller.js  transfer.controller.js  user.controller.js
dicom_ui/backend/middleware/: auth.js  roles.js
dicom_ui/backend/models/: auditLog.model.js  revokedToken.model.js  user.model.js
dicom_ui/backend/routes/: auth.routes.js  log.routes.js  study.routes.js  (+2 more)
dicom_ui/frontend/: index.html  package.json  vite.config.js
scripts/: generate_tls_certs.sh
(+15 files in other folders)
